[package]
name = "bliss-mixer"
version = "0.0.4"
authors = ["Craig Drummond <craig.p.drummond@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Mix songs using Bliss anlysis"
repository = "https://github.com/CDrummond/bliss-mixer"
keywords = ["audio", "song", "similarity"]
readme = "README.md"

[dependencies]
argparse = "0.2.2"
rusqlite = { version = "0.25.0", features = ["bundled"] }
log = "0.4.14"
env_logger = "0.8.4"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
kiddo = "0.2.3"
chrono = "0.4.19"
rand = "0.8.4"

